# QRMatrix.C

./: .gitignore  README.md
DOCS/: examples.md  index.md
DevTools/: devtools.c  devtools.h
Examples/01.SVG/: CMakeLists.txt  main.c  qrmatrixsvg.c  qrmatrixsvg.h
Examples/02.LibSPNG/: CMakeLists.txt  main.c
Examples/03.QT/: CMakeLists.txt  main.cpp  mainwindow.cpp
Examples/04.CoreGraphic/MacOS/QRMatrix/QRMatrix/: QRMatrixLib.m
Examples/04.CoreGraphic/MacOS/QRMatrix/QRMatrix.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/MacOS/QRMatrixExample/QRMatrixExample.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/iOS/QRMatrix/QRMatrix/: QRMatrixLib.m
Examples/04.CoreGraphic/iOS/QRMatrix/QRMatrix.xcodeproj/: project.pbxproj
Examples/04.CoreGraphic/iOS/QRMatrixExample/QRMatrixExample.xcodeproj/: project.pbxproj
Examples/05.Android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
Examples/05.Android/app/src/main/java/com/example/qrmatrixexample/: MainActivity.kt
Examples/06.Flutter/: .metadata  README.md  ffigen.yaml  pubspec.yaml
Examples/06.Flutter/android/: CMakeLists.txt  build.gradle  settings.gradle
Examples/06.Flutter/android/src/main/: AndroidManifest.xml
Examples/06.Flutter/example/: README.md  pubspec.yaml
Examples/06.Flutter/example/android/app/: build.gradle
Examples/06.Flutter/example/android/app/src/main/: AndroidManifest.xml
Examples/06.Flutter/example/android/app/src/main/kotlin/com/example/qrmatrixexample_example/: MainActivity.kt
Examples/06.Flutter/example/ios/Runner/: Info.plist
Examples/06.Flutter/example/ios/Runner.xcodeproj/: project.pbxproj
Examples/06.Flutter/example/lib/: main.dart
Examples/06.Flutter/example/linux/: CMakeLists.txt  my_application.cc
Examples/06.Flutter/example/linux/flutter/: generated_plugins.cmake
Examples/06.Flutter/example/macos/Runner.xcodeproj/: project.pbxproj
Examples/06.Flutter/example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
Examples/06.Flutter/example/macos/Runner/Configs/: AppInfo.xcconfig
Examples/06.Flutter/ios/: qrmatrixexample.podspec
Examples/06.Flutter/ios/Classes/: qrmatrixexample.c
Examples/06.Flutter/lib/: qrmatrixexample.dart  qrmatrixexample_bindings_generated.dart
Examples/06.Flutter/linux/: CMakeLists.txt
Examples/06.Flutter/macos/: qrmatrixexample.podspec
QRMatrix/: common.c  common.h  constants.h  qrmatrixboard.c  qrmatrixboard.h  qrmatrixencoder.c  qrmatrixencoder.h  qrmatrixextramode.c  qrmatrixextramode.h  qrmatrixsegment.c  qrmatrixsegment.h
QRMatrix/Encoder/: alphanumericencoder.c  alphanumericencoder.h  kanjiencoder.c  kanjiencoder.h  numericencoder.c  numericencoder.h
QRMatrix/Polynomial/: polynomial.c  polynomial.h
String/: latinstring.c  latinstring.h  shiftjisstring.c  shiftjisstring.h  shiftjisstringmap.h  unicodepoint.c  unicodepoint.h  utf8string.c  utf8string.h
